# pulseaudio-hyperv

./: .gitlab-ci.yml  Makefile.am  PROTOCOL  README  README.md  configure.ac  meson.build  meson_options.txt
.github/workflows/: build-meson.yml  build.yml
.gitlab/issue_templates/: Bug.md  default.md  issue_001.md
doxygen/: doxygen.conf.in
man/: pactl.1.xml.in  pulse-daemon.conf.5.xml.in  pulseaudio.1.xml.in
po/: POTFILES.in  as.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  de_CH.po  el.po  es.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  ml.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sv.po  ta.po  te.po  tr.po  uk.po  zh_CN.po  zh_TW.po
scripts/: pa_info.sh
shell-completion/zsh/: _pulseaudio
src/: .gitignore  Makefile.am  meson.build
src/daemon/: daemon-conf.c  daemon-conf.h  daemon.conf.in  default.pa.in  main.c  manage-pulseaudio-x11.in  meson.build  start-pulseaudio-x11.in  system.pa.in
src/modules/: meson.build  module-combine-sink.c  module-default-device-restore.c  module-equalizer-sink.c  module-esound-sink.c  module-loopback.c  (+17 more)
src/modules/bluetooth/: a2dp-codec-api.h  a2dp-codec-aptx.c  a2dp-codec-faststream.c  a2dp-codec-sbc.c  a2dp-codec-util.c  a2dp-codec-util.h  a2dp-codecs.h  backend-native.c  backend-ofono.c  bluez5-util.c  bluez5-util.h  bt-codec-api.h  hfp-codecs.c  hfp-codecs.h  hsphfpd-util.c  hsphfpd-util.h  hsphfpd.c  legacy-hsp.c  legacy-hsp.h  meson.build  module-bluetooth-discover.c  module-bluetooth-policy.c  module-bluez5-device.c  module-bluez5-discover.c
(+74 files in other folders)
